# armv8_41

./: CMakeLists.txt  Makefile  RegisterInstructionProcessing.c  armstate.c
Extension/: DHT11sensor.c  file_output.py  light.py  sensorsData.c  tem.c  temp.py  waterlevel.py
Extension/DigiPet/: file_output.py  fruits.c  fruits.h  main.c  main.h  musicBackground.c  musicBackground.h  player.c  player.h  sensorsData.c  sensorsData.h  weather.c  weather.h
Extension/tamagochi/: changeWeather.c  defs.h  file_output.py  fruits.c  fruits.h  game  main.c  main.h  musicBackground.c  musicBackground.h  player.c  player.h  processingData.c  sensorsData.c  sensorsData.h  test.c  weather.c  weather.h
doc/: Checkpoint.tex  Report.tex
src/: .cbuild  Aliases.c  Aliases.h  AssemblerDecoder.c  AssemblerDecoder.h  AssemblerInput.c  AssemblerInput.h  AssemblerInputCopy.c  Definitions.h  Makefile  OldMakefile  RaspberryPiAssembly  RegisterInstructionProcessing.c  RegisterInstructionProcessing.h  armstate.c  assemble  assemble.c  assemble.h  bitwise.c  bitwise.h  branchInstrcutions  branchInstructions.c  branchInstructions.h  branchinstructions.h  emulate  emulate.c  emulate.h  emulateOLD.c  hello.out  immediateInstructionProcessing.c  immediateInstructionProcessing.h  inputStage.c  output.out  outputfile71  singleMTransfer.c  singleMTransfer.h  test_functions.c  test_functions.h  testassemble  testassemble.c  (+1 more)
src/RasberryPi/: blinkAssembly.s  immediateInstructionProcessing.h  input.s  inputRead.s  onoff.s  onoffWithComments.s  rasberryPi  rasberryPi.c  singleMTransfer.c
(+6 files in other folders)
